# AsciiJuke

./: .clang-format  CMakeLists.txt
src/: main.cpp
src/ascii_juke/: playlist.cpp  playlist.hpp
src/ui/: graphics.cpp  graphics.hpp  main_menu.cpp  main_menu.hpp
